# glidertest

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  demo-output.html  demo-output.ipynb  genindex.html  glidertest.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: docs.yml  docs_deploy.yml  experiment.yml  tests.yml
_modules/: index.html
_modules/glidertest/: fetchers.html  plots.html  tools.html  utilities.html
docs/source/: conf.py  glidertest.rst  index.rst
glidertest/: fetchers.py  glidertest.mplstyle  plots.py  tools.py  utilities.py
notebooks/: demo.ipynb
tests/: test_fetchers.py  test_plots.py  test_tools.py  test_utilities.py
